# CloudOracle

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.action  README.md  action.yml  docker-compose.yml  entrypoint.sh  go.mod  go.sum
.github/examples/: README.md  terraform-plan-no-llm.yml  terraform-plan.yml
.github/workflows/: cost-self-test.yml  test.yml
checkpoint/: main.tf  real_plan.json  tf.plan
cmd/checkpoint134/: main.go
cmd/checkpoint135/: main.go
cmd/oracle/: cmd_pr_check_test.go  main.go
cmd/probe-pricing/: main.go
docs/: architecture.md  cloud-providers.md  configuration.md  testing.md  v1-guide.md  v2-guide.md  v3-guide.md
e2e-test/: main.tf
insights-agent/: .env.example  .gitignore  README.md  pyproject.toml
insights-agent/src/insights_agent/: __init__.py  config.py  logging.py  main.py  runtime.py
insights-agent/src/insights_agent/api/: __init__.py  app.py  serve.py
insights-agent/src/insights_agent/graph/: basic.py  supervisor.py
insights-agent/src/insights_agent/guardrails/: __init__.py  fallback.py  runner.py  validation.py
insights-agent/src/insights_agent/knowledge/: commitment-discounts.md  cost-allocation-and-tagging.md  data-sources-and-caveats.md  finops-glossary.md  rightsizing.md
insights-agent/src/insights_agent/llm/: __init__.py  base.py  gemini.py
insights-agent/src/insights_agent/rag/: __init__.py  corpus.py  embeddings.py  ingest.py  store.py
insights-agent/src/insights_agent/tools/: cloudoracle.py  knowledge.py
insights-agent/tests/: conftest.py  test_api.py  test_cloudoracle_tools.py  test_config.py  test_corpus.py  test_embeddings.py  test_gemini_provider.py  test_graph.py  test_guardrails.py  test_knowledge_tool.py  test_logging.py  test_main.py  test_supervisor.py
internal/analyzer/: analyzer.go  analyzer_test.go  rules.go
internal/api/: billing_source_test.go  cost_handlers.go  cost_handlers_test.go  dashboard_handlers_test.go  inventory_handler.go  inventory_handler_test.go  middleware.go  middleware_test.go  recommendations_handler.go  recommendations_handler_test.go  server.go  server_test.go  snapshot_source.go  static.go  trends_handler.go  trends_handler_test.go
internal/billing/: billing.go  cost_explorer.go  cost_explorer_test.go
internal/cloud/: aws_clients.go  aws_provider.go  aws_provider_fetch_test.go  aws_provider_test.go  azure_clients.go  azure_provider.go  azure_provider_test.go  factory.go  gcp_clients.go  gcp_provider.go  gcp_provider_test.go  provider.go  synthetic_provider.go
internal/config/: config.go  config_test.go
internal/db/: db.go  db_test.go  insert.go  insert_integration_test.go  snapshots.go  snapshots_integration_test.go  trends.go
internal/db/dbtest/: postgres.go
internal/diff/: engine.go  engine_test.go  markdown.go  markdown_test.go  narrative.go  narrative_integration_test.go  narrative_test.go  types.go  types_test.go
internal/diff/testdata/: markdown_all_skipped.md  markdown_empty_plan.md  markdown_happy_path.md  markdown_mixed_actions.md  markdown_net_decrease.md  markdown_net_zero.md  markdown_with_estimation_errors.md
internal/diff/testdata/narrative_prompts/: happy_path.txt
internal/e2e/: seed_analyze_test.go
internal/generator/: generator.go  generator_test.go
internal/github/: client.go  client_test.go  comments.go  comments_test.go  types.go
internal/iac/: terraform.go  terraform_test.go
internal/iac/aws/: aws.go  aws_test.go  ebs.go  ebs_test.go  ec2.go  ec2_test.go  helpers.go  helpers_test.go  lambda.go  lambda_test.go  nat.go  nat_test.go  rds.go  rds_cluster_instance.go  rds_cluster_instance_test.go  rds_test.go
internal/iac/testdata/: plan_mixed.json  plan_replace.json  plan_simple_create.json
internal/llm/: claude.go  gemini.go  http.go  llm_http_test.go  openai.go  prompt.go  prompt_test.go  provider.go  provider_test.go  retry.go  retry_test.go
internal/logging/: logging.go
internal/migrations/: 001_create_resources.sql  002_create_cost_snapshots.sql  migrations.go
internal/pricing/: aws.go  aws_test.go  cache.go  cache_test.go  change.go  change_test.go  doc.go  ebs.go  ebs_test.go  ec2.go  ec2_test.go  integration_test.go  lambda.go  lambda_test.go  nat.go  nat_test.go  parse.go  parse_test.go  rds.go  rds_cluster_instance.go  rds_cluster_instance_test.go  rds_test.go  regions.go  types.go
internal/pricing/testdata/: ebs_io1_us_east_2.json  ec2_gp3_us_east_2.json  ec2_t3_large_us_east_2.json  lambda_arm64_us_east_2.json  nat_gateway_us_east_2.json  rds_aurora_db_r5_large_us_east_2.json  rds_postgres_db_t3_medium_us_east_2.json  rds_storage_gp2_us_east_2.json
internal/report/: export.go  export_test.go  pdf.go  pdf_test.go
internal/shared/: finding.go  resource.go
migrations/: 001_create_resources.sql  002_create_cost_snapshots.sql
web/: go.mod  index.html  package-lock.json  package.json
web/src/: App.jsx  index.css
web/src/components/: CostByServiceChart.jsx  CostTrendChart.jsx  DashboardLayout.jsx  FindingsTable.jsx  SummaryCards.jsx  UIStates.jsx
web/src/context/: RefreshContext.jsx
web/src/hooks/: useApi.js
web/src/lib/: theme.js
web/src/mocks/: data.js
