[project]
name = "insights-agent"
version = "0.1.0"
description = "LangGraph-based FinOps insights agent for CloudOracle"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "CloudOracle contributors" }]

dependencies = [
    "langgraph>=0.2.60",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.20",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.32.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
insights-agent = "insights_agent.main:cli_entrypoint"
insights-agent-ingest = "insights_agent.rag.ingest:ingest_entrypoint"
insights-agent-serve = "insights_agent.api.serve:serve_entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insights_agent"]
# The FinOps knowledge corpus ships inside the package so ingestion can find it
# via importlib.resources regardless of the working directory.
include = ["src/insights_agent/knowledge/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=insights_agent --cov-report=term-missing --cov-fail-under=80 -ra"
filterwarnings = [
    # `create_react_agent` is the explicit choice for milestone 8.1; the
    # supervisor refactor in 8.4 replaces it. Silence the deprecation here
    # so the warning doesn't drown out real signal in the test output.
    "ignore::langgraph.warnings.LangGraphDeprecationWarning",
    # Starlette's TestClient warns that it uses httpx; not actionable here.
    "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]

[tool.coverage.run]
source = ["src/insights_agent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line-length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src/insights_agent"]

[[tool.mypy.overrides]]
module = [
    "langchain_google_genai.*",
    "langchain_core.*",
    "langchain_postgres.*",
    "langchain_text_splitters.*",
    "uvicorn.*",
]
ignore_missing_imports = true
